--- a/program_temperatury/program_temperatury.vcxproj
+++ b/program_temperatury/program_temperatury.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="program_temperatury.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="headerFile.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
